# spear

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: format.yml
engine/: CMakeLists.txt  Doxyfile
engine/include/spear/: camera.hh  entity.hh  event_handler.hh  material.hh  mesh.hh  spear_root.hh  sprite_3d.hh  texture.hh  transform.hh  window.hh
engine/include/spear/rendering/: api.hh  base_shader.hh  base_texture.hh  shader.hh  shader_type.hh
engine/include/spear/rendering/opengl/: error.hh  opengl_renderer.hh  opengl_shader.hh  renderer.hh  shader.hh  texture.hh
engine/include/spear/shape/: ball.hh  cube.hh  shape.hh
engine/include/spear/shapes/: ball.hh  cube.hh  quad.hh  shape.hh
engine/shaders/: basic_fragment.glsl  basic_vertex.glsl  lighting_fragment.glsl  lighting_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  sprite3d_fragment.glsl  sprite3d_vertex.glsl
engine/src/: camera.cc  event_handler.cc  material.cc  mesh.cc  sprite3d.cc  texture.cc  transform.cc  window.cc
engine/src/rendering/: api.cc  base_shader.cc  base_texture.cc  shader.cc  shader_type.cc
engine/src/rendering/opengl/: opengl_renderer.cc  opengl_shader.cc  renderer.cc  shader.cc  texture.cc
engine/src/shapes/: cube.cc  quad.cc  shape.cc
runtime/: CMakeLists.txt  main.cc
